--- a/style.css
+++ b/style.css
@@ -81,7 +81,6 @@ img{
 }
 p{
     width: 30%; 
-    height: 100px;
     align-items: center;
     line-height: 20px;
 
@@ -96,9 +95,9 @@ form{
 
 }
 
-div + div{
-    margin-bottom: 10px;
-}
+div *{
+    padding: 20px;
+  }
 
 .firstname{
     margin-bottom: 10px;
@@ -119,3 +118,11 @@ div + div{
     text-align: center;
     padding-bottom: 100px;
 }
+@media screen and (max-width: 700px) {
+    div {
+      display: block;
+    }
+    p{
+      font-size: 1rem;
+    }
+  }
